[package]
name = "blockchain"
version = "0.1.0"
authors = ["Eduardo Sabino <eduardoaikin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.42"
rocket = "0.4.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rust-crypto = "0.2.36"
lazy_static = "1.3.0"
reqwest = "0.9.18"
url = "1.5.1"

[dependencies.curl]
git = "https://github.com/carllerche/curl-rust"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["diesel_postgres_pool", "json"]
